--- a/projects/styles.css
+++ b/projects/styles.css
@@ -5,6 +5,7 @@ body {
 
 header {
   width: 100%;
+    background-color: #7d7865;
 }
 
 footer {
@@ -17,18 +18,10 @@ footer {
   width: 100%;
 }
 
-#mySketch {
-  width: 800px;
-  height: 250px;
-  background-color: none;
-  margin: auto;
-  padding: 0px 0px 10px 0px;
-}
-
 div {
 max-width: 800px;
 margin: auto;
-padding-bottom: 20px;
+padding: 20px 0px;
 }
 
 #images {
@@ -61,11 +54,11 @@ section {
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 100;
-  font-size: 25px;
+  font-size: 30px;
   text-align: left;
   text-transform: uppercase;
   color: #000;
-  background-color: #7d7865;
+
 }
 
 h2 {
