--- a/studios/studio1/styles.css
+++ b/studios/studio1/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
   padding-top: 5%;
   padding-left: 15%;
@@ -11,6 +9,10 @@ body {
 header {
   height: 100px;
   width: auto;
+}
+
+header img {
+  float: left;
 }
 
 div {
@@ -29,9 +31,9 @@ article {
 }
 
 section {
-      float: left;
-      border-radius: 20px;
-      margin: 40px;
+  float: left;
+  border-radius: 20px;
+  margin: 40px;
 }
 
 form {
@@ -40,7 +42,6 @@ form {
 
 label {
   font-family: "Arima Madurai", sans-serif;
-  font-size: : 12px;
   text-align: right;
   display: inline-block;
   width: 75px;
@@ -49,8 +50,7 @@ label {
 }
 
 input {
-    font-family: "Arima Madurai", sans-serif;
-    font-size: : 12px;
+  font-family: "Arima Madurai", sans-serif;
   padding: 5px;
   color: white;
   font-size: 10px;
@@ -63,6 +63,7 @@ input {
 input[type="text"] {
   width: 120px;
   font-family: "Arima Madurai", sans-serif;
+  font-size: 12px;
   border-radius: 5px;
   margin: 5px;
   font-size: 10px;
@@ -102,8 +103,6 @@ footer {
 
 /*typography*/
 
-
-
 h1 {
   font-family: "Lobster", sans-serif;
   font-size: 70px;
@@ -112,8 +111,8 @@ h1 {
 
 h2 {
   font-family: "Lobster Two", sans-serif;
-    font-size: 50px;
-    line-height:30px;
+  font-size: 50px;
+  line-height: 30px;
 }
 
 h3 {
@@ -127,7 +126,7 @@ span {
 }
 
 p {
-    font-family: "Arima Madurai", sans-serif;
+  font-family: "Arima Madurai", sans-serif;
   font-size: 20px;
   font-weight: 200;
   line-height: 150%;
