--- a/studios/studio2/styles.css
+++ b/studios/studio2/styles.css
@@ -1,5 +1,6 @@
   /********** MOBILE ************/
 @media screen and (max-width: 768px) {
+
   h1 {
     font-family: "Berkshire Swash", sans-serif;
     margin-top: 15%;
@@ -27,7 +28,7 @@
     text-transform: uppercase;
   }
 
-  #container{
+  #container {
     margin-left: 10%;
     }
 
@@ -155,6 +156,10 @@
     margin-left: 10%;
   }
 
+  #container img {
+    cursor: pointer;
+  }
+
   #planner {
     position: absolute;
     margin-left: 14%;
@@ -243,6 +248,7 @@
     color: white;
     top: 80px;
     right: 100px;
+    cursor: pointer;
   }
 }
 
@@ -261,20 +267,16 @@ body {
     width: 100%;
   }
 
-  a:link {
-    text-decoration: none;
-    color: black;
-  }
-
   a:hover {
     color: white;
   }
 
-  footer a {
+a {
     font-family: 'Helvetica', sans-serif;
-    font-weight: normal;
+    font-weight: lighter;
     text-transform: uppercase;
     font-size: 14px;
     color: #000;
     vertical-align: middle;
+    text-decoration: none;
   }
