--- a/projects/styles.css
+++ b/projects/styles.css
@@ -5,7 +5,7 @@ body {
 
 header {
   width: 100%;
-    background-color: #7d7865;
+  background-color: #7d7865;
 }
 
 footer {
@@ -19,9 +19,9 @@ footer {
 }
 
 div {
-max-width: 800px;
-margin: auto;
-padding: 20px 0px;
+  max-width: 800px;
+  margin: auto;
+  padding: 20px 0px;
 }
 
 #images {
@@ -48,7 +48,6 @@ section {
   text-align: center;
 }
 
-
 /*Typography */
 
 h1 {
@@ -58,7 +57,6 @@ h1 {
   text-align: left;
   text-transform: uppercase;
   color: #000;
-
 }
 
 h2 {
@@ -88,7 +86,7 @@ h4 {
 
 li {
   font-family: 'Helvetica', sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: lighter;
   color: #000;
 }
@@ -100,6 +98,21 @@ nav li {
   line-height: 16px;
   color: #000;
   text-align: justify;
+}
+
+blockquote {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 14px;
+}
+
+b {
+  font-size: 15px;
+  color: #9c9a8b;
+}
+
+em {
+  font-size: 15px;
+  color: #9c9a8b;
 }
 
 a {
