--- a/projects/styles.css
+++ b/projects/styles.css
@@ -2,13 +2,27 @@ body {
   margin: auto;
   width: 100%;
   font-family: 'Helvetica', sans-serif;
-  font-size: 12px;
   font-weight: lighter;
+  text-transform: uppercase;
+  font-size: 13px;
 }
 
 header {
   width: 100%;
-  background-color: #7d7865;
+}
+
+.img-circle {
+    border-radius: 50%;
+    float: left;
+    padding: 10px;
+}
+
+#mySketch {
+  width: 800px;
+  height: 250px;
+  background-color: none;
+  margin: auto;
+  padding: 0px 0px 10px 0px;
 }
 
 footer {
@@ -23,15 +37,11 @@ footer {
 
 div {
   max-width: 800px;
-  margin: auto;
-  padding: 20px 0px;
-}
-
-#images {
-  vertical-align: middle;
+  margin: 0 auto;
 }
 
 aside {
+  margin: auto;
   width: 226px;
   height: 300px;
   float: left;
@@ -40,6 +50,7 @@ aside {
 }
 
 section {
+  margin: auto;
   width: 227px;
   height: 300px;
   padding: 15px;
@@ -56,41 +67,35 @@ section {
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 100;
-  font-size: 30px;
+  font-size: 25px;
   text-align: left;
   text-transform: uppercase;
   color: #000;
+  background-color: #7d7865;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 100;
-  font-size: 30px;
-  text-transform: uppercase;
-  color: #9c9a8b;
+  font-size: 20px;
+  color: #000;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 100;
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
   text-transform: uppercase;
   color: #9c9a8b;
 }
 
 h4 {
-  font-family: 'Montserat', sans-serif;
-  font-weight: 100;
-  font-size: 16px;
-  font-weight: lighter;
-  text-transform: uppercase;
-  color: #9c9a8b;
-}
-
-li {
   font-family: 'Helvetica', sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: lighter;
+  text-align: center;
+  text-transform: uppercase;
   color: #000;
 }
 
@@ -100,49 +105,24 @@ nav li {
   font-size: 14px;
   line-height: 16px;
   color: #000;
-  text-align: justify;
-}
-
-blockquote {
-  font-family: 'Helvetica', sans-serif;
-  font-size: 14px;
-}
-
-b {
-  font-size: 15px;
-  color: #9c9a8b;
-}
-
-em {
-  font-size: 15px;
-  color: #9c9a8b;
+  text-align: left;
 }
 
 a {
   font-family: 'Helvetica', sans-serif;
   font-weight: lighter;
   text-transform: uppercase;
-  font-size: 14px;
-  text-decoration: none;
-  color: #9c9a8b;
-}
-
-p {
-  font-family: 'Helvetica', sans-serif;
-  font-weight: lighter;
-  text-transform: none;
-  font-size: 12px;
+  font-size: 13px;
   text-decoration: none;
   color: #000;
 }
 
-img {
-  float: left;
-  padding: 7px;
-}
-
-.img-circle {
-    border-radius: 50%;
+b {
+  font-family: 'Helvetica', sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  text-decoration: none;
+  color: #000;
 }
 
 a:hover {
