--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: auto;
   width: 100%;
+
 }
 
 header {
@@ -96,6 +97,14 @@ nav li {
   line-height: 16px;
   color: #000;
   text-align: left;
+}
+
+b{
+  font-family: 'Helvetica', sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  text-decoration: none;
+  color: #000;
 }
 
 a {
