--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 body {
   margin: auto;
   width: 100%;
-
+    font-family: 'Helvetica', sans-serif;
+    font-weight: lighter;
+    text-transform: uppercase;
+    font-size: 13px;
+    text-decoration: none;
+    color: #000;
 }
 
 header {
@@ -28,7 +33,7 @@ footer {
 
 div {
   max-width: 800px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 aside {
@@ -99,15 +104,16 @@ nav li {
   text-align: left;
 }
 
-b{
+a {
   font-family: 'Helvetica', sans-serif;
+  font-weight: lighter;
   text-transform: uppercase;
   font-size: 13px;
   text-decoration: none;
   color: #000;
 }
 
-a {
+b {
   font-family: 'Helvetica', sans-serif;
   font-weight: lighter;
   text-transform: uppercase;
