--- a/finalproject/styles.css
+++ b/finalproject/styles.css
@@ -1,5 +1,3 @@
-
-
 @keyframes colorshift {
   0% {
     color: #0a81db;
@@ -32,7 +30,6 @@
     color: #0a81db;
   }
 }
-
 
 body {
   font-family: 'Segoe UI', 'Futura', sans-serif;
@@ -74,7 +71,8 @@ body {
 .page {
   position: fixed;
   left: 0;
-  height: 110%;
+  top: 5%;
+  height: 100%;
   /* so background does not show with animation */
   width: 80%;
   text-align: center;
