--- a/projects/interactiveprototype2/styles.css
+++ b/projects/interactiveprototype2/styles.css
@@ -66,11 +66,10 @@
 
 html {
   height: 100%;
-
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   transition: background-color 5s linear;
   animation: colorshift 30s infinite;
   transition-timing-function: ease-in;
@@ -79,7 +78,6 @@ body {
   position: relative;
   margin: 0;
   height: 100%;
-  -webkit-font-smoothing: antialiased;
 }
 
 .wrapper {
@@ -88,7 +86,6 @@ body {
   margin: 0 auto;
   overflow: hidden;
 }
-
 
 .page {
   top: 2%;
@@ -104,51 +101,47 @@ article {
   width: 300px;
   height: 300px;
   background-color: white;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
-footer{
+footer {
   position: absolute;
   bottom: 0;
   left: 0;
   text-align: center;
   display: block;
-  padding: 7px;
   width: 100%;
   box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   background: rgba(255, 255, 255, 0.25);
-  font-weight: bold;
-  font-size: 13px;
-  color: #000;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
   transition: all 500ms ease-in-out;
 }
 
+footer a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  margin-bottom: -3px;
+  margin-top: -3px;
+}
 
-#page6{
+#page6 {
   top: 25%;
   left: 5%;
 }
 
-#page6 article{
+#page6 article {
   float: right;
   margin-right: 200px;
 }
 
-#page7{
+#page7 {
   top: 25%;
   left: 5%;
 }
 
-#page7 article{
+#page7 article {
   float: right;
   margin-right: 200px;
 }
-
 
 #revealAnim img {
   transition: transform .6s .9s;
@@ -176,6 +169,7 @@ a {
   color: white;
   text-decoration: none;
   border-radius: 50px;
+  border-color: white;
   width: 1.5in;
   padding: 16px;
   margin-top: 2px;
@@ -213,5 +207,4 @@ h3 {
 
 h3 span {
   font-family: 'Lobster', 'Georgia', sans-serif;
-
 }
