--- a/projects/interactiveprototype2/styles.css
+++ b/projects/interactiveprototype2/styles.css
@@ -82,13 +82,18 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.logo {
+  position: fixed;
+  left: 10px;
+  margin-top: 5px;
+}
+
 .wrapper {
   height: 100% !important;
   height: 100%;
   margin: 0 auto;
   overflow: hidden;
 }
-
 
 .page {
   top: 2%;
@@ -101,10 +106,9 @@ body {
 }
 
 article {
-  width: 300px;
-  height: 300px;
-  background-color: white;
-  margin:0 auto;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
 }
 
 footer{
