--- a/projects/interactiveprototype2/styles.css
+++ b/projects/interactiveprototype2/styles.css
@@ -66,10 +66,11 @@
 
 html {
   height: 100%;
+
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
   transition: background-color 5s linear;
   animation: colorshift 30s infinite;
   transition-timing-function: ease-in;
@@ -78,6 +79,7 @@ body {
   position: relative;
   margin: 0;
   height: 100%;
+  -webkit-font-smoothing: antialiased;
 }
 
 .logo {
@@ -104,55 +106,47 @@ body {
 }
 
 article {
-<<<<<<< HEAD
-  width: 200px;
-  height: 200px;
-=======
-  width: 300px;
-  height: 300px;
-  background-color: white;
->>>>>>> db591c7048f33c917388e7a80138d3a442e37cfe
-  margin: 0 auto;
+width: 50%;
+margin: auto;
 }
 
-footer {
+img {
+  margin-top: 40px;
+}
+
+
+footer{
   position: absolute;
   bottom: 0;
   left: 0;
   text-align: center;
   display: block;
+  padding: 3px;
   width: 100%;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   background: rgba(255, 255, 255, 0.25);
+  font-weight: bold;
+  font-size: 13px;
+  color: #000;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
   transition: all 500ms ease-in-out;
 }
 
-footer a {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  margin-bottom: -3px;
-  margin-top: -3px;
-}
 
-#page6 {
+#page6{
   top: 25%;
   left: 5%;
 }
 
-#page6 article {
-  float: right;
-  margin-right: 200px;
-}
-
-#page7 {
+#page7{
   top: 25%;
   left: 5%;
 }
 
-#page7 article {
-  float: right;
-  margin-right: 200px;
-}
 
 #revealAnim img {
   transition: transform .6s .9s;
@@ -180,7 +174,6 @@ a {
   color: white;
   text-decoration: none;
   border-radius: 50px;
-  border-color: white;
   width: 1.5in;
   padding: 16px;
   margin-top: 2px;
@@ -195,7 +188,7 @@ a:visited {
 h1 {
   font-family: 'Roboto', sans-serif;
   margin: auto;
-  font-size: 5vw;
+  font-size: 4.5vw;
   line-height: 0.9;
   align-items: center;
   font-weight: bold;
@@ -205,17 +198,18 @@ h1 {
 
 h1 span {
   font-family: 'Lobster', 'Georgia', sans-serif;
-  font-size: 5.5vw;
+  font-size: 5vw;
 }
 
 h3 {
+
   width: 50%;
   font-size: 3vw;
   line-height: 1;
-  align-items: center;
   font-weight: bold;
 }
 
 h3 span {
   font-family: 'Lobster', 'Georgia', sans-serif;
+
 }
