--- a/projects/interactiveprototype2/pagestyles.css
+++ b/projects/interactiveprototype2/pagestyles.css
@@ -33,11 +33,11 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: white;
   color: black;
 }
 
 section {
+  background-color:
   margin: auto;
   width: 50%;
   margin-bottom: 5%;
@@ -66,8 +66,7 @@ footer {
   display: block;
   width: 100%;
   box-sizing: border-box;
-  background: grey;
-  transition: all 500ms ease-in-out;
+  background: rgba(255, 255, 255, 0.25);
 }
 
 footer a {
