--- a/projects/interactiveprototype2/styles.css
+++ b/projects/interactiveprototype2/styles.css
@@ -1,4 +1,4 @@
-/* @keyframes colorshift2 {
+@keyframes colorshift2 {
   0% {
     color: #24aecc;
   }
@@ -29,8 +29,8 @@
   100% {
     color: #2493cc;
   }
-} */
-
+}
+/*
 @keyframes colorshift {
   0% {
     background-color: #24aecc;
@@ -62,6 +62,28 @@
   100% {
     background-color: #24aecc;
   }
+} */
+
+.arrow {
+  text-align: center;
+bottom: 75px;
+right: 7px;
+}
+
+.bounce {
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
 
 html {
@@ -71,9 +93,7 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-  transition: background-color 5s linear;
-  animation: colorshift 30s infinite;
-  transition-timing-function: ease-in;
+background-color: grey;
   color: white;
   text-align: center;
   position: relative;
@@ -154,9 +174,7 @@ right: 7px;
 }
 
 .bounce {
-  -moz-animation: bounce 2s;
-  -webkit-animation: bounce 2s;
-  animation: bounce 2s;
+  animation: bounce 5s infinite;
 }
 
 @keyframes bounce {
@@ -187,13 +205,10 @@ right: 7px;
   transform: translate3d(-300%, 0, 0);
 }
 
-.viewing-page-2 #revealAnim img {
+.viewing-page-3 #revealAnim img {
   transform: translate3d(0, 0, 0);
 }
 
-.viewing-page-5 #revealAnim img {
-  transform: translate3d(0, 0, 0);
-}
 
 /*Typography */
 
@@ -213,30 +228,39 @@ a:visited {
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
   margin: auto;
+  font-weight:400;
   font-size: 4.5vw;
-  line-height: 0.9;
+  line-height: 1;
   align-items: center;
-  font-weight: bold;
-  width: 50%;
+  width: 60%;
   margin-bottom: 1.5%;
+  transition: color 1s linear;
+  animation: colorshift2 15s infinite;
+  transition-timing-function: ease-in;
 }
 
-h1 span {
-  font-family: 'Lobster', 'Georgia', sans-serif;
-  font-size: 5vw;
+span {
+  font-weight: 700;
+  color: white;
 }
+
+/* h1 span {
+  font-weight:700;
+  font-size: 5vw;
+} */
 
 h3 {
+  font-weight:700;
   text-align: left;
   width: 40%;
   font-size: 3vw;
   line-height: 1;
-  font-weight: bold;
 }
 
 h3 span {
-  font-family: 'Lobster', 'Georgia', sans-serif;
-
+  font-weight:400;
+  transition: color 1s linear;
+  animation: colorshift2 15s infinite;
+  transition-timing-function: ease-in;
 }
