--- a/projects/interactiveprototype2/onepage-scroll.css
+++ b/projects/interactiveprototype2/onepage-scroll.css
@@ -66,7 +66,7 @@ body, .onepage-wrapper, html {
   width: 10px;
   height: 10px;
   background: none;
-  background-color: grey;
+  background-color: lightgrey;
   margin-top: -4px;
   left: 8px;
 }
