--- a/projects/interactiveprototype2/styles.css
+++ b/projects/interactiveprototype2/styles.css
@@ -245,22 +245,23 @@ span {
   color: white;
 }
 
-/* h1 span {
+h1 span {
   font-weight:700;
-  font-size: 5vw;
-} */
+  font-size: 5.5vw;
+}
 
 h3 {
-  font-weight:700;
+  font-weight:400;
   text-align: left;
   width: 40%;
   font-size: 3vw;
   line-height: 1;
-}
-
-h3 span {
-  font-weight:400;
   transition: color 1s linear;
   animation: colorshift2 15s infinite;
   transition-timing-function: ease-in;
+}
+
+h3 span {
+  font-weight:700;
+  color: white;
 }
