--- a/projects/interactiveprototype2/pagestyles.css
+++ b/projects/interactiveprototype2/pagestyles.css
@@ -32,9 +32,7 @@
 }
 
 body {
-  transition: color 1s linear;
-  animation: colorshift 15s infinite;
-  transition-timing-function: ease-in;
+
   font-family: 'Roboto', sans-serif;
   color: black;
 }
@@ -42,7 +40,7 @@ body {
 section {
   margin: 0 auto;
   background-color: white;
-  width: 75%;
+  width: 90%;
 }
 
 article {
@@ -55,6 +53,8 @@ article {
 .profile{
 margin: auto;
 float: left;
+width: 25%:
+text-align: center;
 }
 
 img {
@@ -72,7 +72,9 @@ footer {
   display: block;
   width: 100%;
   box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.25);
+  transition: color 20s linear;
+  animation: colorshift 30s infinite;
+  transition-timing-function: ease-in;
 }
 
 footer a {
@@ -97,16 +99,19 @@ a {
 h1 {
   font-family: 'Lobster', sans-serif;
   font-size: 3vw;
+    text-align: center;
 }
 
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.5vw;
+    text-align: center;
 }
 
 h3 {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1vw;
+  font-size: 1.5vw;
+  line-height: 150%;
 }
 
 p {
