--- a/projects/final/pagestyles.css
+++ b/projects/final/pagestyles.css
@@ -53,12 +53,11 @@ article {
 .profile{
 margin: auto;
 float: left;
-width: 25%:
+max-width: 25%;
 text-align: center;
 }
 
 img {
-  float: left;
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -105,6 +104,7 @@ h1 {
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.5vw;
+  line-height: 0.7;
     text-align: center;
 }
 
