--- a/projects/final/styles.css
+++ b/projects/final/styles.css
@@ -30,6 +30,7 @@
     color: #2493cc;
   }
 }
+
 /*
 @keyframes colorshift {
   0% {
@@ -66,8 +67,8 @@
 
 .arrow {
   text-align: center;
-bottom: 75px;
-right: 7px;
+  bottom: 75px;
+  right: 7px;
 }
 
 .bounce {
@@ -88,12 +89,11 @@ right: 7px;
 
 html {
   height: 100%;
-
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-background-color: grey;
+  font-family: 'Roboto', sans-serif;
+  background-color: grey;
   color: white;
   text-align: center;
   position: relative;
@@ -126,16 +126,16 @@ background-color: grey;
 }
 
 article {
-width: 50%;
-margin: auto;
+  width: 50%;
+  margin: auto;
+  margin-top: 5%;
 }
 
 img {
   margin-top: 40px;
 }
 
-
-footer{
+footer {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -156,21 +156,20 @@ footer{
   transition: all 500ms ease-in-out;
 }
 
-
-#page6{
+#page6 {
   top: 15%;
   left: 5%;
 }
 
-#page7{
+#page7 {
   top: 15%;
   left: 5%;
 }
 
 .arrow {
-position: fixed;
-bottom: 75px;
-right: 7px;
+  position: fixed;
+  bottom: 75px;
+  right: 7px;
 }
 
 .bounce {
@@ -209,7 +208,6 @@ right: 7px;
   transform: translate3d(0, 0, 0);
 }
 
-
 /*Typography */
 
 a {
@@ -229,7 +227,7 @@ a:visited {
 
 h1 {
   margin: auto;
-  font-weight:400;
+  font-weight: 400;
   font-size: 4.5vw;
   line-height: 1;
   align-items: center;
@@ -240,19 +238,18 @@ h1 {
   transition-timing-function: ease-in;
 }
 
-
 span {
   font-weight: 700;
   color: white;
 }
 
 h1 span {
-  font-weight:700;
+  font-weight: 700;
   font-size: 5.5vw;
 }
 
 h3 {
-  font-weight:400;
+  font-weight: 400;
   text-align: left;
   width: 40%;
   font-size: 3vw;
@@ -263,6 +260,6 @@ h3 {
 }
 
 h3 span {
-  font-weight:700;
+  font-weight: 700;
   color: white;
 }
