--- a/projects/styles.css
+++ b/projects/styles.css
@@ -51,7 +51,7 @@ aside {
 section {
   margin: auto;
   width: 227px;
-  height: 300px;
+  min-height: 300px;
   padding: 15px;
   border: 10px;
   float: left;
