--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ aside {
 section {
   margin: auto;
   width: 227px;
-  height: 300px;
+  min-height: 350px;
   padding: 15px;
   border: 10px;
   float: left;
