--- a/projects/final/pagestyles.css
+++ b/projects/final/pagestyles.css
@@ -31,39 +31,6 @@
   }
 }
 
-@keyframes colorshift2 {
-  0% {
-    color: #24aecc;
-  }
-  11% {
-    color: #245bcc
-  }
-  22% {
-    color: #3c24cc;
-  }
-  33% {
-    color: #9324cc;
-  }
-  44% {
-    color: #cc2478;
-  }
-  55% {
-    color: #cc2424;
-  }
-  66% {
-    color: #cc5b24;
-  }
-  77% {
-    color: #ccbe24;
-  }
-  88% {
-    color: #24cc73;
-  }
-  100% {
-    color: #2493cc;
-  }
-}
-
 body {
 
   font-family: 'Roboto', sans-serif;
@@ -84,16 +51,15 @@ article {
 }
 
 .profile{
-
-  position: fixed;
 margin: auto;
 float: left;
-max-width: 20%;
+max-width: 25%;
 text-align: center;
 }
 
 img {
-  width: 50%;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
 }
 
@@ -103,10 +69,7 @@ footer {
   left: 0;
   text-align: center;
   display: block;
-  padding: 3px;
   width: 100%;
-  padding: 16px;
-  font-size: 13px;
   box-sizing: border-box;
   transition: color 20s linear;
   animation: colorshift 30s infinite;
@@ -115,17 +78,18 @@ footer {
 
 footer a {
   font-family: 'Roboto', sans-serif;
-  font-weight: 700;
-  color: white;
+  font-size: 14px;
   margin-bottom: -3px;
   margin-top: -3px;
 }
 
 a {
-
-  color: white;
+  color: black;
   text-decoration: none;
+  border-radius: 50px;
+  border-color: white;
   width: 1.5in;
+  padding: 16px;
   margin-top: 2px;
   text-align: center;
   display: inline-block;
@@ -135,9 +99,6 @@ h1 {
   font-family: 'Lobster', sans-serif;
   font-size: 3vw;
     text-align: center;
-    transition: color 1s linear;
-    animation: colorshift2 30s infinite;
-    transition-timing-function: ease-in;
 }
 
 h2 {
@@ -150,15 +111,10 @@ h2 {
 h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.5vw;
-  line-height: 1.5;
-}
-
-h4 {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.25vw;
+  line-height: 150%;
 }
 
 p {
-  font-size: 1.15vw;
-  line-height: 2;
+  font-size: 1vw;
+  line-height: 150%;
 }
