Added nav and project name to final project
Made responsive styles

--- a/projects/final/styles.css
+++ b/projects/final/styles.css
@@ -132,22 +132,25 @@ body {
 section {
   margin: auto;
   width: 500px;
-  height: 400px;
+  max-height: 400px;
   border: 10px;
   float: left;
+}
 
+#blurb {
+  margin-left: 50px;
 }
 
 #container{
   margin: 5%;
 }
 
-article {
+/* article {
   position: absolute;
-  left: 25%;
+  left: 45%;
   width: 100%;
   margin-top: 5%;
-}
+} */
 
 footer {
   position: absolute;
@@ -167,6 +170,15 @@ footer {
 
 
 /*Typography */
+
+#mainlinks {
+  margin-top: 25px;
+  width: 1.5in;
+  text-decoration: none;
+  border: 2px #fff solid;
+  margin-right: 50px;
+}
+
 
 a {
   font-weight: 700;
@@ -193,6 +205,7 @@ h1 {
   line-height: 1;
   text-align: left;
   margin-bottom: 1.5%;
+  padding: 10px;
   /* transition: color 1s linear;
   animation: colorshift2 25s infinite;
   transition-timing-function: ease-in; */
@@ -206,6 +219,7 @@ span {
 h1 span {
   font-family: 'Rock Salt', cursive;
   font-size: 5vw;
+
 }
 
 h3 {
@@ -224,4 +238,23 @@ h3 span{
 
 br {
   line-height: 2;
+}
+
+h4 {
+  font-family: 'Rock Salt', cursive;
+  font-size: 1vw;
+  position: fixed;
+  left: 100px;
+}
+
+@media only screen and (max-width: 600px) {
+h3 {
+  font-size: 1.25vw;
+}
+}
+
+@media only screen and (max-width: 1100px) {
+#blurb {
+  margin-left: 0;
+}
 }
