--- a/projects/final/styles.css
+++ b/projects/final/styles.css
@@ -77,6 +77,7 @@
 }
 
 /*One Page Scroll Styles*/
+
 .wrapper {
   height: 100% !important;
   height: 100%;
@@ -141,7 +142,7 @@ section {
   margin-left: 50px;
 }
 
-#container{
+#container {
   margin: 5%;
 }
 
@@ -167,8 +168,6 @@ footer {
   transition: all 500ms ease-in-out;
 }
 
-
-
 /*Typography */
 
 #mainlinks {
@@ -177,14 +176,14 @@ footer {
   text-decoration: none;
   border: 2px #fff solid;
   margin-right: 50px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
-
 
 a {
   font-weight: 700;
   color: white;
   text-decoration: none;
-  border-radius: 50px;
   padding: 16px;
   text-align: center;
   display: inline-block;
@@ -194,8 +193,8 @@ a:visited {
   text-decoration: none;
 }
 
-a:hover{
-   background: rgba(255,255,255,0.3);
+a:hover {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 h1 {
@@ -219,7 +218,6 @@ span {
 h1 span {
   font-family: 'Rock Salt', cursive;
   font-size: 5vw;
-
 }
 
 h3 {
@@ -232,7 +230,7 @@ h3 {
   transition-timing-function: ease-in; */
 }
 
-h3 span{
+h3 span {
   font-weight: 700;
 }
 
@@ -242,19 +240,23 @@ br {
 
 h4 {
   font-family: 'Rock Salt', cursive;
-  font-size: 1vw;
+  font-size: 1.25vw;
   position: fixed;
   left: 100px;
+  display: inline-block;
 }
 
 @media only screen and (max-width: 600px) {
-h3 {
-  font-size: 1.25vw;
-}
+  h3 {
+    font-size: 1.25vw;
+  }
 }
 
 @media only screen and (max-width: 1100px) {
-#blurb {
-  margin-left: 0;
-}
+  #blurb {
+    margin-left: 0;
+  }
+  footer {
+    display: none;
+  }
 }
