--- a/projects/doc-makerfaire/pagestyles.css
+++ b/projects/doc-makerfaire/pagestyles.css
@@ -64,19 +64,100 @@
   }
 }
 
+/*Nav*/
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+    font-family: 'Roboto', Helvetica;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  text-align: left;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  position: absolute;
+  top: -10px;
+  right: 0;
+  transition: margin-left .5s;
+  padding: 16px;
+  color: white;
+}
+
+/*Changes inside nav*/
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+
+/*Main Styles*/
+
 body {
 
   font-family: 'Roboto', sans-serif;
   color: black;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+  transition: color 2s linear;
+  animation: colorshift 60s infinite;
+  transition-timing-function: ease-in;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+header a{
+  padding: 1%;
+  font-family: 'Rock Salt', cursive;
+  font-size: 18px;
+  color: white;
+}
+
 section {
-  margin: 0 auto;
+  margin-top: 5%;
   background-color: white;
   width: 90%;
 }
 
 article {
+  margin-top: 5%;
   background-color: white;
   margin: auto;
   width: 55%;
@@ -85,11 +166,16 @@ article {
 }
 
 .profile{
-margin: auto 2.5%;
+margin-left: 7%;
 float: left;
 max-width: 30%;
-text-align: center;
 position: fixed;
+}
+
+#back a{
+  font-weight: 400;
+  font-size: 16px;
+  text-align: left;
 }
 
 
@@ -117,23 +203,7 @@ footer a {
   font-size: 14px;
   margin-bottom: -3px;
   margin-top: -3px;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-  border-radius: 50px;
-  border-color: white;
-  width: 1.5in;
-  padding: 16px;
-  margin-top: 2px;
-  display: inline-block;
-}
-
-a:hover {
-  transition: color 20s linear;
-  animation: colorshift2 30s infinite;
-  transition-timing-function: ease-in;
+  color: white;
 }
 
 h1 {
@@ -145,8 +215,8 @@ h1 {
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.5vw;
-  line-height: 0.7;
-    text-align: center;
+  line-height: 0.5;
+  text-align: center;
 }
 
 h3 {
@@ -155,7 +225,36 @@ h3 {
   line-height: 150%;
 }
 
+h4 {
+  text-align: left;
+  font-size: 12;
+  font-weight: 400;
+}
+
 p {
   font-size: 1.25vw;
   line-height: 160%;
+}
+
+a {
+  font-size: 1.5vw;
+  font-weight: 700;
+  color: black;
+  text-decoration: none;
+  padding: 16px;
+  display: inline-block;
+}
+
+header a:hover {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+footer a:hover {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.profile a:hover{
+  transition: color 20s linear;
+  animation: colorshift2 30s infinite;
+  transition-timing-function: ease-in;
 }
